--- a/src/app/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx-creator/bmx-creator.component.html
@@ -118,7 +118,7 @@
                 <!-- Position Column -->
                 <ng-container matColumnDef="Client">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Client</th>
-                    <td mat-cell *matCellDef="let element"> {{element.Client}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.Companyname}} </td>
                 </ng-container>
                 <ng-container matColumnDef="ProjectName">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </th>
@@ -171,7 +171,7 @@
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
-            <mat-paginator [pageSizeOptions]="[5, 10, 6613]" showFirstLastButtons></mat-paginator>
+            <mat-paginator [pageSizeOptions]="[100, 500, 1000]" showFirstLastButtons></mat-paginator>
         </div>
     </div>
 
