--- a/src/app/bmx/bmx-creator/bmx-creator.component.scss
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.scss
@@ -207,6 +207,9 @@
     .project-list::-webkit-scrollbar {
         display: none;
     }
+    .template-list::-webkit-scrollbar {
+        display: none;
+    }
     
     
 }
