--- a/src/app/bmx/bmx-creator/project-list/project-list.component.html
+++ b/src/app/bmx/bmx-creator/project-list/project-list.component.html
@@ -1,18 +1,18 @@
 <div *ngIf="isMenuActive1" class="main-project-list">   
     <div >
-        <div>
-            PROJECT LIST
-            <mat-form-field appearance="fill" style="border-radius: 0px">
-                <mat-label>Current Selection</mat-label>
+        <div  style="display: flex;justify-content: space-between; margin-top: 20px;">
+            <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">MATRIX LIST</div>
+            <mat-form-field style="float:right; padding-right: 20px">
+                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="border-radius: 0px">
+                <mat-label>Sort By</mat-label>
                 <mat-select [(value)]="selected" (selectionChange)="changeView()">
                     <mat-option value="Live">Live</mat-option>
                     <mat-option value="Closed">Closed</mat-option>
                     <mat-option value="All">All</mat-option>
                 </mat-select>
-            </mat-form-field>
-            <mat-form-field style="float:right; padding-right: 20px">
-                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-            </mat-form-field>
+            </mat-form-field>         
         </div>
         <div>
             <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" style="width: 1000px;">
@@ -44,7 +44,7 @@
                 <ng-container matColumnDef="Email">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-icon-button color="primary" aria-label="Example icon button with a home icon"
+                        <button mat-icon-button  style="color: #488abc;" aria-label="Example icon button with a home icon"
                             (click)="sendEmail(element.ProjectId)">
                             <mat-icon>email</mat-icon>
                         </button>
@@ -53,7 +53,7 @@
                 <ng-container matColumnDef="Edit">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-icon-button color="green" aria-label="Example icon button with a home icon"
+                        <button mat-icon-button  style="color: #48bcb4;" aria-label="Example icon button with a home icon"
                             (click)="editBM(element.ProjectId)">
                             <mat-icon>build</mat-icon>
                         </button>
@@ -62,7 +62,7 @@
                 <ng-container matColumnDef="Delete">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-icon-button color="warn" aria-label="Example icon button with a home icon"
+                        <button mat-icon-button  style="color: #bc488a;" aria-label="Example icon button with a home icon"
                             (click)="deleteBM(element.ProjectId)">
                             <mat-icon>delete</mat-icon>
                         </button>
