--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -448,14 +448,14 @@
          justify-content: flex-start;width: 100%;flex-wrap: wrap;text-align: center;">
             <div *ngFor="let template of TEMPLATES; let i = index">
                 {{template.name}}
-                <div (mouseenter)="isTemplateSelected = i" (mouseleave)="isTemplateSelected = ''"
-                    style="display: flex;flex-direction: row;justify-content: center;align-items: center;width: 200px;height: 200px;background-color: lightgray;border: grey solid 1px;margin: 20px;">
-                    <button 
-                     (click)="isSelectedButton = i"
-                     *ngIf="isTemplateSelected === i && isSelectedButton !== i" mat-raised-button style="background-color: green;color:white;margin: 0 20px 0 20px;">
+                <div [ngClass]="(isSelectedButton === i)?'template-list-selected':'template-list-item'"
+                    (mouseenter)="isTemplateSelected = i" (mouseleave)="isTemplateSelected = ''">
+                    <button (click)="isSelectedButton = i" *ngIf="isTemplateSelected === i && isSelectedButton !== i"
+                        mat-raised-button style="background-color: #76d354;color:white;margin: 0 20px 0 20px;">
                         SELECT
                     </button>
-                    <button *ngIf="isSelectedButton === i" mat-raised-button style="background-color: lightseagreen;color:white;margin: 0 20px 0 20px;">
+                    <button *ngIf="isSelectedButton === i" mat-raised-button
+                        style="background-color: #01a6ff;color:white;margin: 0 20px 0 20px;">
                         SELECTED
                     </button>
                 </div>
@@ -469,9 +469,91 @@
 
 
     <!-- IMAGE UPLOADER 🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎🎎-->
-    <div class="Image-Uploader" *ngIf="isMenuActive10" style="border: hotpink solid 1px; width: 60%; height: 100vh;">
-        Image Uploader
+    <div class="Image-Uploader" *ngIf="isMenuActive10" style="border: hotpink solid 0px; width: 60%; height: 100vh;">
+
+        <h2 style="margin: 20px;">Project TEST BrandMatrix Setup</h2>
+        <!-- HEADER INPUTS -->
+        <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Image Uploader</div>
+
+        <div style="display: flex;flex-direction: row;justify-content: space-between;">
+
+            <div
+                style="display: flex;flex-direction:column; justify-content: space-evenly; align-items: center;border: grey dashed 3px; width: 300px; height: 200px;margin-left: 20px;">
+
+                <mat-icon style="color: #003180; font-size: 90px; margin-top: -20px; height: 10px;
+            width: 90px;">cloud_upload</mat-icon>
+                <br>
+                <br>
+
+                <h3 style="font-weight: 700;">Drag files to upload</h3>
+
+
+                <button mat-raised-button
+                    style="background-color: #003180;color:white;margin: -20px 20px 0 20px;">Select files to
+                    upload</button>
+
+            </div>
+
+            <div style="width: 350px;">
+                <span> Title To Your Upload </span><br>
+                <mat-form-field style="width: 350px;margin-top: 10px;" appearance="outline">
+                    <mat-label>Upload Title</mat-label>
+                    <input matInput placeholder="Upload Title" value="">
+                </mat-form-field>
+            </div>
+            <div>
+                Autosizer <button mat-raised-button
+                    style="background-color: #003180;color:white;margin: -20px 20px 0 20px;">Resize
+                    Selected</button><br>
+                <mat-form-field appearance="outline" style="width: 212px;">
+                    <mat-label>Set Autosize</mat-label>
+                    <mat-select class="selectLabels">
+                        <mat-option *ngFor="let autoSizeOption of AUTOSIZE_OPTIONS" [value]="autoSizeOption">
+                            {{autoSizeOption.name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+
+        </div>
+
+        <div style="display: flex;flex-direction: row;">
+            <div style="margin: 10px;font-size: 20px;color:grey;font-weight: 200;padding-top: 17px;">Images Uploaded
+            </div>
+            <mat-form-field style="width: 200px;margin-top: 10px;" appearance="outline">
+                <mat-label>Find Images</mat-label>
+                <input matInput placeholder="Search Images" value="">
+            </mat-form-field>
+        </div>
+
+
+        <!-- IMAGES LIST -->
+        <div style="border: #003180 solid 1px;  height: 55vh; overflow-y: scroll;">
+
+            <div class="template-list" style="margin-top:20px;display: flex;flex-direction: row; height: 100vh;overflow-y: scroll;
+            justify-content: flex-start;width: 100%;flex-wrap: wrap;text-align: center;">
+               <div *ngFor="let template of TEMPLATES; let i = index">
+                   {{template.name}}
+                   <div [ngClass]="(isSelectedButton === i)?'template-list-selected':'template-list-item'"
+                       (mouseenter)="isTemplateSelected = i" (mouseleave)="isTemplateSelected = ''">
+                       <button (click)="isSelectedButton = i" *ngIf="isTemplateSelected === i && isSelectedButton !== i"
+                           mat-raised-button style="background-color: #76d354;color:white;margin: 0 20px 0 20px;">
+                           SELECT
+                       </button>
+                       <button *ngIf="isSelectedButton === i" mat-raised-button
+                           style="background-color: #01a6ff;color:white;margin: 0 20px 0 20px;">
+                           SELECTED
+                       </button>
+                   </div>
+               </div>
+           </div>
+
+        </div>
+
+
+
     </div>
+
     <div class="Image-Uploader" *ngIf="isMenuActive10" div style="border: pink solid 1px; width: 25%; height: 100vh;">
         SIDE
         PANEL 10</div>
@@ -507,7 +589,18 @@
 
     <!-- RESPONDANTS EMAILS 📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗-->
     <div class="respondants-emails" *ngIf="isMenuActive14"
-        style="border: hotpink solid 1px; width: 60%; height: 100vh;">RESPONDANTS EMAILS
+        style="border: hotpink solid 1px; width: 60%; height: 100vh;">
+
+        <h2 style="margin: 20px;">Project TEST BrandMatrix Setup</h2>
+        <!-- HEADER INPUTS -->
+        <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Email Settings</div>
+
+        <div  style="margin-left: 20px;font-size: 15px;color:grey;font-weight: 100;">Send Director Confirmation Emails</div>
+        <div  style="margin-left: 20px;font-size: 15px;color:grey;font-weight: 100;">Send Department Confirmation Emails</div>
+
+        <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Send</div>
+
+
     </div>
     <div class="respondants-emails" *ngIf="isMenuActive14" div
         style="border: pink solid 1px; width: 25%; height: 100vh;">SIDE
