--- a/src/app/bmx/bmx-creator/project-list/project-list.component.html
+++ b/src/app/bmx/bmx-creator/project-list/project-list.component.html
@@ -2,7 +2,7 @@
     <div >
         <div  style="display: flex;justify-content: space-between; margin-top: 20px;">
             <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">MATRIX LIST</div>
-            <mat-form-field style="float:right; padding-right: 20px">
+            <mat-form-field style="float:right; padding-right: 20px"  appearance="outline">
                 <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
             </mat-form-field>
             <mat-form-field appearance="outline" style="border-radius: 0px">
