--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -532,21 +532,22 @@
 
             <div class="template-list" style="margin-top:20px;display: flex;flex-direction: row; height: 100vh;overflow-y: scroll;
             justify-content: flex-start;width: 100%;flex-wrap: wrap;text-align: center;">
-               <div *ngFor="let template of TEMPLATES; let i = index">
-                   {{template.name}}
-                   <div [ngClass]="(isSelectedButton === i)?'template-list-selected':'template-list-item'"
-                       (mouseenter)="isTemplateSelected = i" (mouseleave)="isTemplateSelected = ''">
-                       <button (click)="isSelectedButton = i" *ngIf="isTemplateSelected === i && isSelectedButton !== i"
-                           mat-raised-button style="background-color: #76d354;color:white;margin: 0 20px 0 20px;">
-                           SELECT
-                       </button>
-                       <button *ngIf="isSelectedButton === i" mat-raised-button
-                           style="background-color: #01a6ff;color:white;margin: 0 20px 0 20px;">
-                           SELECTED
-                       </button>
-                   </div>
-               </div>
-           </div>
+                <div *ngFor="let template of TEMPLATES; let i = index">
+                    {{template.name}}
+                    <div [ngClass]="(isSelectedButton === i)?'template-list-selected':'template-list-item'"
+                        (mouseenter)="isTemplateSelected = i" (mouseleave)="isTemplateSelected = ''">
+                        <button (click)="isSelectedButton = i"
+                            *ngIf="isTemplateSelected === i && isSelectedButton !== i" mat-raised-button
+                            style="background-color: #76d354;color:white;margin: 0 20px 0 20px;">
+                            SELECT
+                        </button>
+                        <button *ngIf="isSelectedButton === i" mat-raised-button
+                            style="background-color: #01a6ff;color:white;margin: 0 20px 0 20px;">
+                            SELECTED
+                        </button>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
@@ -588,23 +589,122 @@
 
 
     <!-- RESPONDANTS EMAILS 📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗-->
-    <div class="respondants-emails" *ngIf="isMenuActive14"
-        style="border: hotpink solid 1px; width: 60%; height: 100vh;">
+    <div class="respondants-emails" *ngIf="isMenuActive14" style="border: hotpink solid 0px; height: 100vh;">
 
         <h2 style="margin: 20px;">Project TEST BrandMatrix Setup</h2>
+
+
+
         <!-- HEADER INPUTS -->
-        <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Email Settings</div>
+        <div style="display: flex;flex-direction: row;justify-content: space-evenly;">
 
-        <div  style="margin-left: 20px;font-size: 15px;color:grey;font-weight: 100;">Send Director Confirmation Emails</div>
-        <div  style="margin-left: 20px;font-size: 15px;color:grey;font-weight: 100;">Send Department Confirmation Emails</div>
+            <div>
 
-        <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Send</div>
+                <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Email Settings</div>
+
+                <div style="margin-left: 20px;font-size: 15px;color:grey;font-weight: 100;">Send Director Confirmation
+                    Emails
+                </div>
+                <div style="margin-left: 20px;font-size: 15px;color:grey;font-weight: 100;">Send Department Confirmation
+                    Emails
+                </div>
+
+                <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Send</div>
+
+                <div style="display: flex;flex-direction: row;">
+                    <mat-form-field appearance="outline" style="margin-left: 20px;">
+                        <mat-label>Select no complete</mat-label>
+                        <mat-select class="selectLabels">
+                            <mat-option *ngFor="let settingsList of settingsData.DepartmentList" [value]="settingsList">
+                                {{settingsList}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+
+                    <div style="display: flex;flex-direction: column;">
+                        <div>
+                            <button mat-raised-button
+                                style="background-color: #003180;color:white;margin: 5px 20px 0 20px;">
+                                Upload Participants
+                            </button>
+                        </div>
+                        <div style="position: relative;left: 89px;top: 2px;color: grey;">{{'0 Participants'}}</div>
+                    </div>
+                </div>
+            </div>
 
 
+            <div style="display: flex;flex-direction: column;">
+                <div style="display: flex;flex-direction: row;justify-content: space-evenly;">
+
+                    <div>
+                        <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Templates</div>
+                        <mat-form-field appearance="outline" style="margin-left: 20px;">
+                            <mat-label>Chosse Template</mat-label>
+                            <mat-select class="selectLabels">
+                                <mat-option *ngFor="let EMAIL_TEMPLATE of EMAIL_TEMPLATES" [value]="EMAIL_TEMPLATE">
+                                    {{EMAIL_TEMPLATE.name}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                    <div>
+                        <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Link Type</div>
+                        <mat-form-field appearance="outline" style="margin-left: 20px;">
+                            <mat-label>Direct Link</mat-label>
+                            <mat-select class="selectLabels">
+                                <mat-option *ngFor="let settingsList of settingsData.DepartmentList"
+                                    [value]="settingsList">
+                                    {{settingsList}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                        <button mat-raised-button
+                            style="background-color: #003180;color:white;margin: 10px 20px 0 20px;height: 38px;">
+                            load Text
+                        </button>
+                    </div>
+                </div>
+                <div style="margin-left: 20px;">
+                    <div style="margin-bottom: 20px;font-size: 20px;color:#063074;font-weight: 800;">Send Invite</div>
+                    <div style="display: flex;flex-direction: row;margin-bottom: 20px; justify-content: space-between;">
+                        <div style="color:#063074;font-size: 20px;margin-right: 20px;">From :</div>
+                        <input style="width: 458px;" mat-input type="text" placeholder="director@brandinstitute.com">
+                    </div>
+                    <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
+                        <div style="color:#063074;font-size: 20px;margin-right: 20px;">CC :</div>
+                        <input style="width: 458px;" mat-input type="text" placeholder="CC">
+                    </div>
+                    <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
+                        <div style="color:#063074;font-size: 20px;margin-right: 20px;">BCC :</div>
+                        <input style="width: 458px;" mat-input type="text" placeholder="creative@brandinstitue.com,director1@brandinstitue.com,direct...">
+                    </div>
+                    <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
+                        <div style="color:#063074;font-size: 20px;margin-right: 20px;">Subject :</div>
+                        <input style="width: 458px;" mat-input type="text" placeholder="Subject">
+                    </div>
+
+                    <div style="display: flex;flex-direction: row;">
+                        <mat-icon style="color: #003180;font-size: 25px;">attach_file</mat-icon>
+                        <div style="color: grey;">{{'attachments'}}</div>
+                        <button mat-raised-button
+                            style="background-color: #003180;color:white;margin: -7px 0px 0 12px;">
+                            Chosse File(s)
+                        </button>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
     </div>
-    <div class="respondants-emails" *ngIf="isMenuActive14" div
+
+
+
+
+    <!-- <div class="respondants-emails" *ngIf="isMenuActive14" div
         style="border: pink solid 1px; width: 25%; height: 100vh;">SIDE
-        PANEL 14</div>
+        RESPONDANTS EMAILS 14</div> -->
     <!-- END 📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗📗 RESPONDANTS EMAILS -->
 
 
