--- a/src/app/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx-creator/bmx-creator.component.html
@@ -227,18 +227,16 @@
                 <div style="display: flex;flex-direction: row;">
                     <label class="selectLabels">Salesboard</label>
                     <mat-form-field appearance="outline">
-                        <mat-label>Select Salesboard Project</mat-label>
-                        <mat-select class="selectLabels">
-                            <mat-option *ngFor="let settingsList of settingsData.SalesBoardProjectList"
-                                [value]="settingsList">
-                                {{settingsList}}
-                            </mat-option>
-                        </mat-select>
+                            <mat-select formControlName="bmxSalesboard">
+                                <mat-option *ngFor="let settingsList of settingsData.SalesBoardProjectList" [value]="settingsList">
+                                    {{settingsList}}
+                                </mat-option>
+                            </mat-select>
                     </mat-form-field>
                     <label class="selectLabels">Department</label>
                     <mat-form-field appearance="outline">
                         <mat-label>Select Department</mat-label>
-                        <mat-select>
+                        <mat-select formControlName="bmxDepartment">
                             <mat-option *ngFor="let settingsList of settingsData.DepartmentList" [value]="settingsList">
                                 {{settingsList}}
                             </mat-option>
@@ -251,12 +249,12 @@
                     <label class="selectLabels">Project Name</label>
                     <mat-form-field appearance="outline">
                         <mat-label>Enter Project Name</mat-label>
-                        <input type="text" matInput>
+                        <input type="text" matInput formControlName="bmxProjectName">
                     </mat-form-field>
                     <label class="selectLabels">Region</label>
                     <mat-form-field appearance="outline">
                         <mat-label>Select Region</mat-label>
-                        <mat-select>
+                        <mat-select formControlName="bmxRegion">
                             <mat-option *ngFor="let settingsList of settingsData.OfficeList" [value]="settingsList">
                                 {{settingsList}}
                             </mat-option>
@@ -269,12 +267,12 @@
                     <label class="selectLabels">Company</label>
                     <mat-form-field appearance="outline">
                         <mat-label>Enter Company</mat-label>
-                        <input type="text" matInput>
+                        <input type="text" matInput formControlName="bmxCompany">
                     </mat-form-field>
                     <label class="selectLabels">Language</label>
                     <mat-form-field appearance="outline">
                         <mat-label>Select Language</mat-label>
-                        <mat-select>
+                        <mat-select formControlName="bmxLanguage">
                             <mat-option *ngFor="let settingsList of settingsData.LanguageList" [value]="settingsList">
                                 {{settingsList}}
                             </mat-option>
@@ -292,7 +290,7 @@
                     <label class="selectLabels">Regional Directors</label>
                     <mat-form-field appearance="outline">
                         <mat-label>Select Region</mat-label>
-                        <mat-select>
+                        <mat-select formControlName="bmxRegionalDirector">
                             <!-- <mat-option *ngFor="let settingsList of settingsData.DirectorList" [value]="settingsList.id">
                                 {{settingsList.Director}}, {{settingsList.Title}}
                             </mat-option> -->
@@ -308,11 +306,11 @@
                     <label class="selectLabels">Director Name</label>
                     <mat-form-field appearance="outline">
                         <mat-label>Director</mat-label>
-                        <mat-select>
+                        <mat-selec [(ngModel)]=""t>
                             <mat-option *ngFor="let settingsList of settingsData.DirectorList" [value]="settingsList">
                                 {{settingsList.Director}}
                             </mat-option>
-                        </mat-select>
+                        </mat-selec>
                     </mat-form-field>
                 </div>
 
