--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -2,9 +2,12 @@
     <div class="page-design" *ngIf="isMenuActive11" dragula="TASKS" [(dragulaModel)]="brandMatrixObjects"
         (dragulaModelChange)="checkDragEvetn($event);brandMatrixObjects = $event">
 
-        <div *ngFor="let bmxItem of brandMatrixObjects; let i = index"
-            style="display: flex;flex-direction: column;margin: 10px;">
-            <!-- BMX HEADER 😋 -->
+
+        <!-- BRAND MATRIX MODULAR LEGO TEMPLATE COMPONENTS  🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀 -->
+        <div *ngFor="let bmxItem of brandMatrixObjects; let i = index" style="display: flex;flex-direction: column;margin: 10px;">
+
+
+            <!-- BMX HEADER 😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋 -->
 
             <div *ngIf="bmxItem.componentType === 'logo-header'" class="header development-border">
                 <div class="emoji-handle">.</div>
@@ -16,9 +19,10 @@
                     <img style="width: 127px;margin-right: 20px;" src="./assets/img/bmx/BD.png">
                 </div>
             </div>
-            <!--😋 END BMX HEADER  -->
+            <!--😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋 END BMX HEADER  -->
 
-            <!-- BMX PARAGRAPH EDITOR 📑 -->
+
+            <!-- BMX PARAGRAPH EDITOR 📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑 -->
             <div *ngIf="bmxItem.componentType === 'text-editor'" class="paragraph development-border">
                 <div class="emoji-handle">.</div>
                 <div style="margin: 30px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
@@ -34,13 +38,16 @@
                     <mat-icon style="font-size: 25px;">edit</mat-icon>
                 </button>
             </div>
-            <!-- 📑 END BMX PARAGRAPH EDITOR -->
+            <!-- 📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑 END BMX PARAGRAPH EDITOR -->
 
 
             <!-- LINEAR SCALE -->
             <div *ngIf="bmxItem.componentType === 'ranking-scale'" class="development-border"
                 style="display: flex;flex-direction: column;position: relative;">
+
+
                 <div class="emoji-handle">.</div>
+                
                 <div *ngFor="let testName of testNames" style="margin:10px 10px;">
                     <div class="test-name-table">
                         <label style="width: 10%;text-align: start;margin-left: 10px;"
@@ -48,7 +55,7 @@
                         <label style="width: 10%;text-align: start;margin-left: 10px;"
                             for="html">{{testName.rationale}}</label>
 
-                        <button mat-raised-button color="primary" class="edit-icon">
+                        <!-- <button mat-raised-button color="primary" class="edit-icon">
                             1
                         </button>
                         <button mat-raised-button color="primary" class="edit-icon">
@@ -59,7 +66,7 @@
                         </button>
                         <button mat-raised-button color="primary" class="edit-icon">
                             4
-                        </button>
+                        </button> -->
                         <input type="radio" id="1" [name]="testName.name" value="1">
                         <label for="1">1</label>
                         <input type="radio" id="2" [name]="testName.name" value="2">
@@ -74,7 +81,7 @@
             <!-- END LINEAR SCALE -->
 
         </div>
-
+        <!-- END 🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀 BRAND MATRIX MODULAR LEGO TEMPLATE COMPONENTS   -->
     </div>
 
     <div class="project-info" *ngIf="isMenuActive11" style="border: pink solid 1px; width: 25%; height: 100vh;">
