--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -9,18 +9,51 @@
 
             <!-- BMX HEADER 😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋 -->
 
-            <div *ngIf="bmxItem.componentType === 'logo-header'" class="header development-border">
+            <div *ngIf="bmxItem.componentType === 'logo-header'" class="header">
+                
                 <div class="emoji-handle">.</div>
+
                 <div>
-                    <img style="width: 127px;margin-left: 20px;" src="./assets/img/bi-logo-with-tagline.svg">
+                    <img style="width: 231px;margin-left: 8px;" src="./assets/img/bmx/BRANDMATRIX-DASHBOARD-LOGO.svg">
                 </div>
-                <div><span style="color: #253b7d;">Brand</span> <span style="color: #253b7d;">Matrix</span></div>
+
                 <div>
+                    <span style="color: #253b7d;font-size: 30px;margin-right: 31px;outline: none;font-family: Arial, Helvetica, sans-serif;">PROJECT NAME</span>
+                </div>
+               
+                <div >
+                    <button (click)="toggleInstructions()" style="margin-right: 33px;" mat-icon-button matTooltip="Instructions" matTooltipPosition="above">
+                        <!-- <div>Instructions</div> -->
+                        <mat-icon style="font-size: 30px;color: #37457d;" class="full-icon">description</mat-icon>
+                    </button>
                     <img style="width: 127px;margin-right: 20px;" src="./assets/img/bmx/BD.png">
                 </div>
+
+               
+
+
             </div>
             <!--😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋😋 END BMX HEADER  -->
 
+
+            <!-- BMX PARAGRAPH EDITOR 📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑 -->
+            <div *ngIf="bmxItem.componentType === 'instructions' && displayInstructions" class="paragraph development-border">
+                <div class="emoji-handle">.</div>
+                <div style="margin: 30px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
+                <ckeditor *ngIf="i === selectedIndex" id="txtTexto" class="ckeditorcev"
+                    style="animation: fadeIn 0.5s ease forwards;" [ngModelOptions]="{standalone: true}"
+                    [(ngModel)]="bmxItem.componentText" [data]="bmxItem.componentText" [config]="ckconfig">
+                </ckeditor>
+
+                <button *ngIf="i === selectedIndex" class="cancel" (click)="selectedIndex = '';" mat-icon-button>
+                    <mat-icon style="font-size: 25px;">cancel</mat-icon>
+                </button>
+                <button *ngIf="i !== selectedIndex" mat-icon-button class="edit-icon" (click)="selectedIndex = i">
+                    <mat-icon style="font-size: 25px;">edit</mat-icon>
+                </button>
+            </div>
+            <!-- 📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑 END BMX PARAGRAPH EDITOR -->
+            
 
             <!-- BMX PARAGRAPH EDITOR 📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑 -->
             <div *ngIf="bmxItem.componentType === 'text-editor'" class="paragraph development-border">
