--- a/src/app/bmx/bmx-creator/respondents/respondents.component.html
+++ b/src/app/bmx/bmx-creator/respondents/respondents.component.html
@@ -80,7 +80,7 @@
                      </td>
             </ng-container>
             <ng-container matColumnDef="delete">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
+                <th mat-header-cell *matHeaderCellDef style="width: 3.33%;"> </th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-icon-button  style="color: #bc488a;" aria-label="Example icon button with a home icon"
                         (click)="deletPart(element.firstName)">
