--- a/src/app/bmx/bmx-creator/respondents/respondents.component.html
+++ b/src/app/bmx/bmx-creator/respondents/respondents.component.html
@@ -42,41 +42,41 @@
             <ng-container matColumnDef="firstName">
                 <th mat-header-cell *matHeaderCellDef style="width: 15%;" > First Name </th>
                 <td mat-cell *matCellDef="let element"> 
-                    <input matInput placeholder="First Name " [value]="element.firstName" [(ngModel)]="element.firstName">
+                    <input matInput placeholder="First Name " [value]="element.firstName" [(ngModel)]="element.firstName" (focusout)="onFocusOutEvent($event)">
                 </td>
             </ng-container>
             
             <ng-container matColumnDef="lastName">
                 <th mat-header-cell *matHeaderCellDef style="width: 15%;"> Last Name </th>
                 <td mat-cell *matCellDef="let element"> 
-                    <input matInput placeholder="Last Name" [value]="element.lastName" [(ngModel)]="element.lastName">
+                    <input matInput placeholder="Last Name" [value]="element.lastName" [(ngModel)]="element.lastName" (focusout)="onFocusOutEvent($event)">
                      </td>
             </ng-container>
             <ng-container matColumnDef="email">
                 <th mat-header-cell *matHeaderCellDef style="width: 30%;"> Email </th>
                 <td mat-cell *matCellDef="let element"> 
-                    <input matInput placeholder="Email" [value]="element.email" [(ngModel)]="element.email">
+                    <input matInput placeholder="Email" [value]="element.email" [(ngModel)]="element.email" (focusout)="onFocusOutEvent($event)">
 
                      </td>
             </ng-container>
             <ng-container matColumnDef="group">
                 <th mat-header-cell *matHeaderCellDef style="width: 5%;"> Group </th>
                 <td mat-cell *matCellDef="let element"> 
-                    <input matInput placeholder="" [value]="element.group" [(ngModel)]="element.group">
+                    <input matInput placeholder="" [value]="element.group" [(ngModel)]="element.group" (focusout)="onFocusOutEvent($event)">
 
                      </td>
             </ng-container>
             <ng-container matColumnDef="subGroup">
                 <th mat-header-cell *matHeaderCellDef style="width: 5%;"> Subgroup </th>
                 <td mat-cell *matCellDef="let element"> 
-                    <input matInput placeholder="" [value]="element.subGroup" [(ngModel)]="element.subGroup">
+                    <input matInput placeholder="" [value]="element.subGroup" [(ngModel)]="element.subGroup" (focusout)="onFocusOutEvent($event)">
 
                      </td>
             </ng-container>
             <ng-container matColumnDef="weight">
                 <th mat-header-cell *matHeaderCellDef style="width: 5%;"> Weight </th>
                 <td mat-cell *matCellDef="let element">
-                    <input matInput placeholder="" [value]="element.weight" [(ngModel)]="element.weight">
+                    <input matInput placeholder="" [value]="element.weight" [(ngModel)]="element.weight" (focusout)="onFocusOutEvent($event)">
                      </td>
             </ng-container>
             <ng-container matColumnDef="delete">
