basic image uploader functions done

--- a/src/app/bmx/bmx-creator/bmx-creator.component.scss
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.scss
@@ -216,7 +216,7 @@
         align-items: center;
         width: 200px;
         height: 200px;
-        background-color: lightgray;
+        //background-color: lightgray;
         border: grey solid 1px;
         margin: 20px;
     }
