--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -129,7 +129,7 @@
                 </div>
 
 
-                <div *ngFor="let testName of testNames; let y = index" style="margin:10px 10px;">
+                <div *ngFor="let testName of bmxItem.componentText; let y = index" style="margin:10px 10px;">
                     <div class="test-name-table">
 
                         <div style="width: 33%;text-align: start;margin-left: 10px;">{{testName.name}}</div>
@@ -137,9 +137,9 @@
 
                         <div style="width: 33%;text-align: start;margin-left: 10px;">{{testName.rationale}}</div>
 
-                        <div *ngFor="let star of  STARS; let i = index">
-                            <button (mouseenter)="selectStar(star.id); selectedStarRatingIndex = y.toString()+star.id" 
-                            [ngClass]="(y.toString()+star.id === selectedStarRatingIndex)?star.class:'active-rating-star'" style="outline: none;" mat-icon-button
+                        <div *ngFor="let star of  testName.STARS; let i = index">
+                            <button (mouseenter)="selectStar(star.id , y)" (click)="setRating(star.id,y)"
+                            [ngClass]="star.class" style="outline: none;" mat-icon-button
                             aria-label="ranking">
                             <mat-icon>{{star.icon}}</mat-icon>
                         </button>
